test/types/records/intents/out-intent-error-array3.good
out-intent-error-array3.chpl:17: error: halt reached - assigning between arrays of different shapes in dimension 1: 1 vs. 2
